lib/misc/ace.pas


      function AdsCreateIndex90( hObj: ADSHANDLE;
                                 pucFileName: PAceChar;
                                 pucTag: PAceChar;
                                 pucExpr: PAceChar;
                                 pucCondition: PAceChar;
                                 pucWhile: PAceChar;
                                 ulOptions: UNSIGNED32;
                                 ulPageSize: UNSIGNED32;
                                 pucCollation: PAceChar;
                                 phIndex: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCreateFTSIndex( hTable: ADSHANDLE;
                                  pucFileName: PAceChar;
                                  pucTag: PAceChar;
                                  pucField: PAceChar;
                                  ulPageSize: UNSIGNED32;
                                  ulMinWordLen: UNSIGNED32;
                                  ulMaxWordLen: UNSIGNED32;
                                  usUseDefaultDelim: UNSIGNED16;
                                  pvDelimiters: pointer;
                                  usUseDefaultNoise: UNSIGNED16;
                                  pvNoiseWords: pointer;
                                  usUseDefaultDrop: UNSIGNED16;
                                  pvDropChars: pointer;
                                  usUseDefaultConditionals: UNSIGNED16;
                                  pvConditionalChars: pointer;
                                  pucCollation: PAceChar;
                                  pucReserved1: PAceChar;
                                  ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCreateTable( hConnection: ADSHANDLE;
                               pucName: PAceChar;
                               pucAlias: PAceChar;
                               usTableType: UNSIGNED16;
                               usCharType: UNSIGNED16;
                               usLockType: UNSIGNED16;
                               usCheckRights: UNSIGNED16;
                               usMemoSize: UNSIGNED16;
                               pucFields: PAceChar;
                               phTable: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCreateTable71( hConnection: ADSHANDLE;
                                 pucName: PAceChar;
                                 pucDBObjName: PAceChar;
                                 usTableType: UNSIGNED16;
                                 usCharType: UNSIGNED16;
                                 usLockType: UNSIGNED16;
                                 usCheckRights: UNSIGNED16;
                                 usMemoSize: UNSIGNED16;
                                 pucFields: PAceChar;
                                 ulOptions: UNSIGNED32;
                                 phTable: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCreateTable90( hConnection: ADSHANDLE;
                                 pucName: PAceChar;
                                 pucDBObjName: PAceChar;
                                 usTableType: UNSIGNED16;
                                 usCharType: UNSIGNED16;
                                 usLockType: UNSIGNED16;
                                 usCheckRights: UNSIGNED16;
                                 usMemoSize: UNSIGNED16;
                                 pucFields: PAceChar;
                                 ulOptions: UNSIGNED32;
                                 pucCollation: PAceChar;
                                 phTable: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreate( pucDictionaryPath: PAceChar;
                            usEncrypt: UNSIGNED16;
                            pucDescription: PAceChar;
                            phDictionary: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreate101( pucConnectString: PAceChar;
                               phConnectOptions: pADSHANDLE;
                               phDictionary: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateRefIntegrity( hDictionary: ADSHANDLE;
                                        pucRIName: PAceChar;
                                        pucFailTable: PAceChar;
                                        pucParentTableName: PAceChar;
                                        pucParentTagName: PAceChar;
                                        pucChildTableName: PAceChar;
                                        pucChildTagName: PAceChar;
                                        usUpdateRule: UNSIGNED16;
                                        usDeleteRule: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateRefIntegrity62( hDictionary: ADSHANDLE;
                                          pucRIName: PAceChar;
                                          pucFailTable: PAceChar;
                                          pucParentTableName: PAceChar;
                                          pucParentTagName: PAceChar;
                                          pucChildTableName: PAceChar;
                                          pucChildTagName: PAceChar;
                                          usUpdateRule: UNSIGNED16;
                                          usDeleteRule: UNSIGNED16;
                                          pucNoPrimaryError: PAceChar;
                                          pucCascadeError: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDRemoveRefIntegrity( hDictionary: ADSHANDLE;
                                        pucRIName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetDatabaseProperty( hObject: ADSHANDLE;
                                         usPropertyID: UNSIGNED16;
                                         pvProperty: pointer;
                                         pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetFieldProperty( hObject: ADSHANDLE;
                                      pucTableName: PAceChar;
                                      pucFieldName: PAceChar;
                                      usPropertyID: UNSIGNED16;
                                      pvProperty: pointer;
                                      pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetIndexFileProperty( hObject: ADSHANDLE;
                                          pucTableName: PAceChar;
                                          pucIndexFileName: PAceChar;
                                          usPropertyID: UNSIGNED16;
                                          pvProperty: pointer;
                                          pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetIndexProperty( hObject: ADSHANDLE;
                                      pucTableName: PAceChar;
                                      pucIndexName: PAceChar;
                                      usPropertyID: UNSIGNED16;
                                      pvProperty: pointer;
                                      pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetLinkProperty( hConnect: ADSHANDLE;
                                     pucLinkName: PAceChar;
                                     usPropertyID: UNSIGNED16;
                                     pvProperty: pointer;
                                     pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetTableProperty( hObject: ADSHANDLE;
                                      pucTableName: PAceChar;
                                      usPropertyID: UNSIGNED16;
                                      pvProperty: pointer;
                                      pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetUserGroupProperty( hObject: ADSHANDLE;
                                          pucUserGroupName: PAceChar;
                                          usPropertyID: UNSIGNED16;
                                          pvProperty: pointer;
                                          pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetUserProperty( hObject: ADSHANDLE;
                                     pucUserName: PAceChar;
                                     usPropertyID: UNSIGNED16;
                                     pvProperty: pointer;
                                     pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetViewProperty( hObject: ADSHANDLE;
                                     pucViewName: PAceChar;
                                     usPropertyID: UNSIGNED16;
                                     pvProperty: pointer;
                                     pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetTriggerProperty( hObject: ADSHANDLE;
                                        pucTriggerName: PAceChar;
                                        usPropertyID: UNSIGNED16;
                                        pvProperty: pointer;
                                        pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetProcedureProperty( hObject: ADSHANDLE;
                                          pucProcName: PAceChar;
                                          usPropertyID: UNSIGNED16;
                                          pvProperty: pointer;
                                          pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetRefIntegrityProperty( hObject: ADSHANDLE;
                                             pucRIName: PAceChar;
                                             usPropertyID: UNSIGNED16;
                                             pucProperty: PAceChar;
                                             pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetPermissions( hDBConn: ADSHANDLE;
                                    pucGrantee: PAceChar;
                                    usObjectType: UNSIGNED16;
                                    pucObjectName: PAceChar;
                                    pucParentName: PAceChar;
                                    usGetInherited: UNSIGNED16;
                                    pulPermissions: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGrantPermission( hAdminConn: ADSHANDLE;
                                     usObjectType: UNSIGNED16;
                                     pucObjectName: PAceChar;
                                     pucParentName: PAceChar;
                                     pucGrantee: PAceChar;
                                     ulPermissions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
